# mmap_gfortran

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindFFTW3.cmake
src/: CMakeLists.txt  mmap_fortran18.f90
